eoullim-Project/src/main/java/org/example/eoullimback/_common/error/exception/Exception401.java
package org.example.eoullimback._common.error.exception;

public class Exception401 extends RuntimeException {
    public Exception401(String msg) {
        super(msg);
    }

}
